# oocp

./: .gitignore  Makefile.am  Makefile.in  README.markdown  config.h  configure  configure.ac
include/: painting.h  snafu.h  unittest.h
src/: .gitignore  Makefile.am  Makefile.in  foo1.c  foo2.c  lns.c  painting.c  printer.c  prototrick.c  simple_inheritance.c  snafu.c  stringalloc.c
src/.deps/: snafu.Po
test/: test.c  test.cpp  unittest.c  unittest.cpp
