
bin_PROGRAMS = snafu prototrick simple_inheritance printer painting

snafu_SOURCES = snafu.c
prototrick_SOURCES = prototrick.c
simple_inheritance_SOURCES = simple_inheritance.c
printer_SOURCES = printer.c
painting_SOURCES = painting.c

AM_CPPFLAGS = -I../include -Wall -pedantic -Wno-comment -D$*_STANDALONE

